# omnis

./: .env.example  .gitignore  .goreleaser.yaml  AGENT05.md  CLAUDE.md  Makefile  README.md  ace-plan.md  agent_harnesses_essay.md  curate.go  doc.go  embed_test_cmd.go  go.mod  go.mod.tmp  go.sum  main.go  main_test.go  mcp.md  permissions_cmd.go  reindex_docs.go  reindex_precedents.go  simple-endpoint-latency-investigation.md  softskills_design_plan.md
.agents/: README.md
.claude/: settings.json
agent/: agent.go  agentmd_plugin.go  astgrep_deps_gate.go  build_plugins.go  build_subagents.go  build_toolsets.go  builtin.go  coding_efficiency_plugin.go  coding_efficiency_plugin_test.go  curate_tool.go  curator_hook.go  curator_hook_test.go  embedder.go  file_change_hook.go  frontmatter.go  frontmatter_test.go  goal_eval.go  hooks_plugin.go  hooks_plugin_test.go  infrastructure.go  instance.go  instructions.go  instructions_test.go  load_recorder.go  load_recorder_test.go  lsp_deps_gate.go  lsp_infra.go  manager.go  manager_test.go  permission_asker.go  precedents_hook.go  reload_hook.go  resumable_agent_tool.go  resumable_agent_tool_test.go  routing.go  routing_test.go  runtime_config.go  runtime_config_test.go  session_aside.go  session_reseed.go  (+12 more)
config/: a2a_config.json  agent.yaml  agents.json  lsp_config.json  mcp_config.yaml  models.json  permissions.json  permissions.yaml  remote_registries.json  server.yaml
docs/: architecture.md  cmd-catalog.md  configuration.md  context-management.md  examples-catalog.md  extending.md  k8s-context-compression-e2e.md  methodology.md  notebooks.md  providers.md  semantic-recall.md  skills.md  specialising.md
examples/: index.ipynb
packaging/: README.md
packaging/pip/: README.md  pyproject.toml  setup.py
packaging/pip/src/omnis/: __init__.py  launcher.py  seed.py
scripts/: a2a_smoke.sh  build_i18n.mjs  build_wheels.py  run_k8s_context_e2e.sh  run_softskills_e2e.sh
server/: a2a_server.go  a2a_server_test.go  agent_meta.go  agentmd.go  aside.go  ask_user.go  auth.go  auth_test.go  bash.go  browse.go  browser_darwin.go  browser_linux.go  config.go  (+52 more)
(+742 files in other folders)
