[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnis-agent"
description = "Omnis — a multi-agent harness: CLI/TUI (omnis) + HTTP API & Web UI server (omnis-server)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Bertrand Louargant", email = "blouargant@chapsvision.fr" }]
keywords = ["agent", "llm", "ai", "cli", "tui", "mcp", "a2a", "harness"]
# Version is injected at build time from the OMNIS_WHEEL_VERSION environment
# variable (see setup.py); the wheel itself carries no Python dependencies —
# it ships the prebuilt Go binaries + bundled config/registry/web as data.
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Go",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/blouargant/omnis"
Repository = "https://github.com/blouargant/omnis"
Issues = "https://github.com/blouargant/omnis/issues"

# Console commands stay `omnis` / `omnis-server` even though the PyPI
# distribution is `omnis-agent`. `omnis-seed` re-materialises the bundled
# defaults into ~/.omnis (the launcher seeds them automatically on first run).
[project.scripts]
omnis = "omnis.launcher:main_omnis"
omnis-server = "omnis.launcher:main_server"
omnis-seed = "omnis.seed:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["omnis"]
# package_data (the bundled _dist/ tree: binaries + config + registry + web)
# is computed by walking the staged directory in setup.py, so it works across
# setuptools versions regardless of recursive-glob support.
include-package-data = false
